--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 polars = "0.36.2"
 thiserror = "1.0.56"
 floco = {git="ssh://git@github.com/rileyleff/floco.git"}
+serde = { version = "1.0.195", features = ["std", "alloc", "derive"] }
