--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 polars = "0.36.2"
-thiserror = "1.0.56"
-floco = {git="ssh://git@github.com/rileyleff/floco.git"}
-serde = { version = "1.0.195", features = ["std", "alloc", "derive"] }
+thiserror = "1.0.58"
+serde = { version = "1.0.197", features = ["std", "alloc", "derive"] }
+floco = { version = "0.1.0", features = ["std"], default-features = false}
