--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "plomo"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,3 +11,4 @@ thiserror = "1.0.58"
 serde = { version = "1.0.197", features = ["std", "alloc", "derive"] }
 floco = { version = "0.1.0", features = ["std"], default-features = false}
 toml = "0.8.11"
+tempfile = "3.10.1"
